set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
target_link_libraries(engineLib ${SDL2_LIBRARY})
target_sources(engineLib PRIVATE light.cpp)
target_sources(engineLib PRIVATE tgaimage.cpp)
target_sources(engineLib PRIVATE loader.cpp)
target_sources(engineLib PRIVATE pool.cpp)
target_sources(engineLib PRIVATE rasterize.cpp)
target_sources(engineLib PRIVATE shader.cpp)
target_sources(engineLib PRIVATE geometry.cpp)
target_sources(engineLib PRIVATE engine.cpp)
target_sources(engineLib PRIVATE camera.cpp)
target_sources(engineLib PRIVATE scene.cpp)
target_sources(engineLib PRIVATE overlay.cpp)
target_sources(engineLib PRIVATE demo_game.cpp)
